Adicionando pvc e variaveis de ambiente para o postgres

--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -12,8 +12,21 @@ spec:
       labels:
         component: postgres
     spec:
+      volumes: 
+        - name: postgres-storage
+          persistentVolumeClaim:
+            claimName: database-persistent-volume-claim
       containers:
         - name: postgres
           image: postgres
+          env:
+            - name: POSTGRES_DB
+              value: "db"
+            - name: POSTGRES_HOST_AUTH_METHOD
+              value: "trust"
           ports:
             - containerPort: 5432
+          volumeMounts:
+            - name: postgres-storage
+              mountPath: /var/lib/postgresql/data
+              subPath: postgres
