--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -19,14 +19,15 @@ spec:
       containers:
         - name: postgres
           image: postgres
-          env:
-            - name: POSTGRES_DB
-              value: "db"
-            - name: POSTGRES_HOST_AUTH_METHOD
-              value: "trust"
           ports:
             - containerPort: 5432
           volumeMounts:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
               subPath: postgres
+          env: 
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: pgpassword
+                  key: PGPASSWORD
